--- a/views/Facturacion/Consulta/umilla.html
+++ b/views/Facturacion/Consulta/umilla.html
@@ -1,1 +1,262 @@
-consulta facturacion umilla
+<div ng-controller="B2B_Fact_Obje_Resp_Controller">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Facturación</a></li>
+        <li><a href="javascript:;">Consulta Facturación</a></li>
+        <li class="active">20401 - Detalle Troncal</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Detalle Facturación Troncal <small>Gestión de Facturación</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Filtros de Busqueda </h4>
+                </div>
+
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">N&uacute;mero de Viaje</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                           <label class="col-md-2 control-label">Patente</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="CPPL-54" />
+                            </div>
+                        </div>
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Fecha</label>
+                            <div class="col-md-6">
+                                <div class="input-group input-daterange">
+                                    <input type="text" class="form-control" name="start" placeholder="Inicio" />
+                                    <span class="input-group-addon">a</span>
+                                    <input type="text" class="form-control" name="end" placeholder="Termino" />
+                                </div>
+                            </div>
+                        </div>
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Tipo Cobro</label>
+                            <div class="col-md-2">
+                                 <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>45 CONCEPCION</option>
+                                    <option>41 TALCA</option>
+                                </select>
+                            </div>
+                           <label class="col-md-2 control-label">Tipo Viaje</label>
+                            <div class="col-md-2">
+                                 <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>45 CONCEPCION</option>
+                                    <option>41 TALCA</option>
+                                </select>
+                            </div>
+                        </div>
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Transportista</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="TRANSPORTES FABIO" />
+                            </div>
+                           <label class="col-md-2 control-label">Tipo Vehiculo</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>45 CONCEPCION</option>
+                                    <option>41 TALCA</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Origen</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>00 CD- SANTIAGO</option>
+                                </select>
+                            </div>
+                            <label class="col-md-2 control-label">Destino</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>45 CONCEPCION</option>
+                                    <option>41 TALCA</option>
+                                </select>
+                            </div>
+                        </div>
+                        
+						<div class="form-group">
+							<label class="col-md-3 control-label">N&uacute;mero de Manifiesto de Carga</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="222015" />
+                            </div>
+							<label class="col-md-2 control-label">N&uacute;mero de OF</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="1000" />
+                            </div>
+						</div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">OC</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="10550" />
+                            </div>
+                            <label class="col-md-2 control-label">Estado Facturacion</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>Facturado</option>
+                                    <option>Recibido</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Acciones:</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success">Buscar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Solicitudes Registradas </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Viaje</th>
+                            <th>Patente</th>
+                            <th>Fec.Desde</th>
+                            <th>Fec.Hasta</th>
+							<th>Tipo Cobro</th>
+                            <th>Tipo Viaje</th>
+							<th>Transportista</th>
+							<th>Tipo Vehiculo</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+							<th>MC</th>
+							<th>OF</th>
+                            <th>OC</th>
+                            <th>Estado Fac.</th>
+                            <th>N° Factura</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td>CPPL-54</td>
+                            <td>09/02/17</td>
+                            <td>10/02/17</td>
+                            <td>CARGA SUELTA</td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES FABIO</td>
+                            <td>CM40</td>
+							<td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>222015</td>
+							<td>1000</td>
+							<td>10550</td>
+							<td>APROBADA</td>
+                            <td>45850</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214223</a></td>
+                            <td>CPPL-54</td>
+                            <td>09/02/17</td>
+                            <td>10/02/17</td>
+                            <td>CARGA SUELTA</td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES FABIO</td>
+                            <td>CM40</td>
+							<td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>222015</td>
+							<td>1000</td>
+							<td>10550</td>
+							<td>APROBADA</td>
+                            <td>45850</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                           <td><a href="../../carga_todos.html">214224</a></td>
+                            <td>CPPL-54</td>
+                            <td>09/02/17</td>
+                            <td>10/02/17</td>
+                            <td>CARGA SUELTA</td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES FABIO</td>
+                            <td>CM40</td>
+							<td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>222015</td>
+							<td>1000</td>
+							<td>10550</td>
+							<td>APROBADA</td>
+                            <td>45850</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214225</a></td>
+                            <td>CPPL-54</td>
+                            <td>09/02/17</td>
+                            <td>10/02/17</td>
+                            <td>CARGA SUELTA</td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES FABIO</td>
+                            <td>CM40</td>
+							<td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>222015</td>
+							<td>1000</td>
+							<td>10550</td>
+							<td>APROBADA</td>
+                            <td>45850</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <button class="btn btn-info" >Cancelar</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
