--- a/views/Mantenedores/Tarifa/Troncal/agregar.html
+++ b/views/Mantenedores/Tarifa/Troncal/agregar.html
@@ -25,7 +25,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Formulario Creación de Tarifas (PASO 1)</h4>
+                    <h4 class="panel-title">Formulario Creación de Tarifas </h4>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal">
@@ -62,8 +62,7 @@
                                 </p>
                             </div>
                         </div>
-
-
+						
                         <div class="form-group">
                             <label class="col-md-3 control-label">Origen</label>
                             <div class="col-md-2">
@@ -92,8 +91,25 @@
 
                                 </select>
                             </div>
-                        
-                            <label class="col-md-3 control-label">Estado</label>
+							
+							<label class="col-md-3 control-label">Tipo de Cobro</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>1 Carga Completa</option>
+                                    <option>2 Carga Parcializada</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
+                            
+                        </div>
+						
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Tarifa</label>
+                            <div class="col-md-2">
+                                <input type="number" class="form-control" placeholder="123434" />
+                            </div>
+							
+							<label class="col-md-3 control-label">Estado</label>
                             <div class="col-md-2">
                                 <select class="form-control">
                                     <option>HABILITADA</option>
@@ -101,6 +117,7 @@
                                 </select>
                             </div>
                         </div>
+						
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones : </label>
                             <div class="col-md-3">
@@ -108,6 +125,35 @@
                                 <button type="submit" class="btn btn-sm btn-info" ng-click="PRO_CANC()">Cancelar</button>
                             </div>
                         </div>
+                    </form>
+                </div>
+            </div>
+            <!-- end panel -->
+			
+			 <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="form-stuff-1">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Carga Masiva de Tarifas</h4>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal">
+
+						<div class="form-group">
+							<label class="col-md-3 control-label">Carga Masiva</label>
+							<div class="col-md-3 control-label">
+								<input ng-model='file' type="file"/>
+							</div>
+							<div class="col-md-3">
+								<button type="submit" class="btn btn-sm btn-success" ng-click = "">Cargar</button>
+							</div>
+						</div>
+
                     </form>
                 </div>
             </div>
