--- a/views/B2B/Transportista/b2b_despacho.html
+++ b/views/B2B/Transportista/b2b_despacho.html
@@ -93,72 +93,86 @@
                         <thead>
                         <tr>
                             <th>N° Despacho</th>
-                            <th>Proveedor</th>
+                            <th>Tipo Despacho</th>
+                            <th>Tipo de Cobro</th>
                             <th>Tipo de Camión</th>
                             <th>Origen</th>
                             <th>Destino</th>
-                            <th>Estado</th>
+                            <th>Fecha</th>
+                            <td>Estado</td>
                             <th>Tarifa</th>
                             <th>Seleccionar</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214222</a></td>.
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td>TRONCAL</td>
+                            <td>CARGA COMPLETA</td>
                             <td>CM40</td>
-                            <td>00 CD-SANTIAGO</td>
+                            <td>55 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
+                            <td>12/02/17 15:01:59</td>
                             <td>CERRADO</td>
                             <td>360,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>TRONCAL</td>
+                            <td>CARGA COMPLETA</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>17 TI-TALCA</td>
+                            <td>12/02/17 15:01:59</td>
                             <td>CERRADO</td>
                             <td>490,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214223</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>TRONCAL</td>
+                            <td>CARGA COMPLETA</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>15 ARICA</td>
+                            <td>12/02/17 15:01:59</td>
                             <td>CERRADO</td>
                             <td>550,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214223</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>TRONCAL</td>
+                            <td>CARGA COMPLETA</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>14 PUERTO MONTT</td>
+                            <td>12/02/17 15:01:59</td>
                             <td>CERRADO</td>
                             <td>680,000</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214224</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>DESPACHO DIRECTO</td>
+                            <td>CARGA COMPLETA</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>36 ANTOFAGASTA</td>
+                            <td>12/02/17 15:01:59</td>
                             <td>CERRADO</td>
                             <td>705,000</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214225</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>ULTIMA MILLA</td>
+                            <td>CARGA COMPLETA</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>19 LA FLORIDA</td>
+                            <td>12/02/17 15:01:59</td>
                             <td>CERRADO</td>
                             <td>90,500</td>
                             <td><input type="checkbox" value="es"> </td>
