--- a/views/Facturacion/Modifica/ns.html
+++ b/views/Facturacion/Modifica/ns.html
@@ -1,1 +1,141 @@
-modifica el valor por ns
+<div ng-controller="">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Facturación</a></li>
+        <li><a href="javascript:;">Modificar</a></li>
+        <li class="active">20502 - Modificar por NS</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Modificar Tarifa NS <small>Gestión de Facturación</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+        <!-- begin col-12 -->
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="form-stuff-1">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Filtros de Busqueda</h4>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">Transportista</label>
+                                <div class="col-md-2">
+                                    <select class="form-control" disabled>
+                                        <option>Transportes Pacifico</option>
+                                        <option>Tur Bus</option>
+                                        <option>Otro</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <label class="control-label col-md-3">Fecha</label>
+                            <div class="col-md-2">
+                                <div class="input-group date" id="datetimepicker1">
+                                    <input type="text" class="form-control" />
+                                    <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </span>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Enviar</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_CONS_PAT()">Buscar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Patente</th>
+                            <th>Proveedor</th>
+                            <th>Rev/Tec</th>
+                            <th>Per/Cir</th>
+                            <th>Cer/Gses</th>
+                            <th>Peso Despacho</th>
+                            <th>Volumen</th>
+                            <th>Estado</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>HVCV-80</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>19-SEP-17</td>
+                            <td>19-SEP-17</td>
+                            <td>31-MAR-17</td>
+                            <td>1520</td>
+                            <td>20</td>
+                            <td>ESTIBADO</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="panel-body">
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <label class="col-md-2 control-label">Numero Sello</label>
+                                <div class="col-md-3">
+                                    <input type="text" class="form-control" placeholder="23455" ng-model="monet_id"  />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">Enviar</label>
+                                <div class="col-md-9">
+                                    <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_AGR_SELL()">Hacer Ingreso</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <table id="data-table2" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Numero Viaje</th>
+                            <th>Patente</th>
+                            <th>Sello</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>200012</td>
+                            <td>HVCV-80</td>
+                            <td>199923</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td>200012</td>
+                            <td>HVCV-80</td>
+                            <td>199924</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="alert alert-success fade in m-b-5">
+                        <strong>
+                            El Ingreso de sello ha sido Exitoso!
+                        </strong>
+                        , Vehiculo Habilitado para Despacho
+                    </div>
+                </div>
+            </div>
+            <!-- end panel -->
+        </div>
+        <!-- end col-12 -->
+
+    </div>
+    <!-- end row -->
+</div>
