--- a/views/Facturacion/Modifica/ns.html
+++ b/views/Facturacion/Modifica/ns.html
@@ -1,4 +1,4 @@
-<div ng-controller="">
+<div ng-controller="20502_Controller">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
