--- a/views/Facturacion/Modifica/ns.html
+++ b/views/Facturacion/Modifica/ns.html
@@ -33,7 +33,7 @@
                             <div class="form-group">
                                 <label class="col-md-3 control-label">Transportista</label>
                                 <div class="col-md-2">
-                                    <select class="form-control" disabled>
+                                    <select class="form-control">
                                         <option>Transportes Pacifico</option>
                                         <option>Tur Bus</option>
                                         <option>Otro</option>
