--- a/views/Facturacion/Modifica/ns.html
+++ b/views/Facturacion/Modifica/ns.html
@@ -62,41 +62,35 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>Patente</th>
                             <th>Proveedor</th>
-                            <th>Rev/Tec</th>
-                            <th>Per/Cir</th>
-                            <th>Cer/Gses</th>
-                            <th>Peso Despacho</th>
-                            <th>Volumen</th>
+                            <th>Nivel Servicio Acido</th>
+                            <th>Nivel Servicio Ajustado</th>
+                            <th>Fecha</th>
                             <th>Estado</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td>HVCV-80</td>
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>19-SEP-17</td>
-                            <td>19-SEP-17</td>
-                            <td>31-MAR-17</td>
-                            <td>1520</td>
-                            <td>20</td>
-                            <td>ESTIBADO</td>
+                            <td>0.97</td>
+                            <td>0.98</td>
+                            <td>1-MAR-17</td>
+                            <td>VIGENTE</td>
                         </tr>
                         </tbody>
                     </table>
                     <div class="panel-body">
                         <form class="form-horizontal">
                             <div class="form-group">
-                                <label class="col-md-2 control-label">Numero Sello</label>
+                                <label class="col-md-2 control-label">Nivel de Serivio Ajustado</label>
                                 <div class="col-md-3">
-                                    <input type="text" class="form-control" placeholder="23455" ng-model="monet_id"  />
+                                    <input type="text" class="form-control" placeholder="0.98" ng-model="monet_id"  />
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label">Enviar</label>
                                 <div class="col-md-9">
-                                    <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_AGR_SELL()">Hacer Ingreso</button>
+                                    <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_AGR_SELL()">Hacer Cambio</button>
                                 </div>
                             </div>
                         </form>
@@ -104,29 +98,32 @@
                     <table id="data-table2" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>Numero Viaje</th>
-                            <th>Patente</th>
-                            <th>Sello</th>
+                            <th>Trasportista</th>
+                            <th>Fecha</th>
+                            <th>NS AJUSTADO</th>
+                            <th>ESTADO</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td>200012</td>
-                            <td>HVCV-80</td>
-                            <td>199923</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>14/03/17 15:14:65</td>
+                            <td>0.99</td>
+                            <td>VIGENTE</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td>200012</td>
-                            <td>HVCV-80</td>
-                            <td>199924</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>01/03/17 00:00:02</td>
+                            <td>0.98</td>
+                            <td>VENCIDO</td>
                         </tr>
                         </tbody>
                     </table>
                     <div class="alert alert-success fade in m-b-5">
                         <strong>
-                            El Ingreso de sello ha sido Exitoso!
+                            El Ingreso del NS ha sido Exitoso!
                         </strong>
-                        , Vehiculo Habilitado para Despacho
+                        , Nivel de servicio habilitado para Facturación
                     </div>
                 </div>
             </div>
