--- a/views/Facturacion/Modifica/ns.html
+++ b/views/Facturacion/Modifica/ns.html
@@ -82,7 +82,7 @@
                     <div class="panel-body">
                         <form class="form-horizontal">
                             <div class="form-group">
-                                <label class="col-md-2 control-label">Nivel de Serivio Ajustado</label>
+                                <label class="col-md-2 control-label">Nivel de Servicio Ajustado</label>
                                 <div class="col-md-3">
                                     <input type="text" class="form-control" placeholder="0.98" ng-model="monet_id"  />
                                 </div>
