--- a/views/Facturacion/Modifica/ns.html
+++ b/views/Facturacion/Modifica/ns.html
@@ -90,7 +90,7 @@
                             <div class="form-group">
                                 <label class="col-md-3 control-label">Enviar</label>
                                 <div class="col-md-9">
-                                    <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_AGR_SELL()">Hacer Cambio</button>
+                                    <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_ACEP_OBJ()">Hacer Cambio</button>
                                 </div>
                             </div>
                         </form>
