--- a/views/Facturacion/Aprobacion/aprueba.html
+++ b/views/Facturacion/Aprobacion/aprueba.html
@@ -67,7 +67,7 @@
                             <div class="col-md-2">
                                 <select class="form-control">
                                     <option>Todos</option>
-                                    <option></option>
+                                    <option>UM</option>
                                     <option></option>
                                 </select>
                             </div>
@@ -118,7 +118,7 @@
                             <td><a href="../../carga_todos.html">10000</a></td>
                           
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>TRONCAL</td>
+                            <td>UM</td>
 							<td>09/02/17 12:15:12 </td>
                             <td>360,500</td>
                            
