--- a/views/Facturacion/Objeciones/responder.html
+++ b/views/Facturacion/Objeciones/responder.html
@@ -34,7 +34,10 @@
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="200021" />
                             </div>
-
+							<label class="col-md-2 control-label">Transportista</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="TRANSPORTES DEL PACIFICO" />
+                            </div>
                         </div>
 
                         <div class="form-group">
