--- a/views/Facturacion/Aprobacion/apre_TRONCAL.html
+++ b/views/Facturacion/Aprobacion/apre_TRONCAL.html
@@ -49,7 +49,7 @@
                             </div>
                             <label class="col-md-3 control-label">Tipo de Viaje</label>
                             <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="MOD" readonly="readonly" />
+                                <input type="text" class="form-control" placeholder="TRONCAL" readonly="readonly" />
                             </div>
                         </div>
 
@@ -64,19 +64,25 @@
 										<th>Viaje</th>
 										<th>Origen</th>
 										<th>Destino</th>
-										<th>Fecha</th>		
-										<th>Tarifa</th>
+										<th>Patente</th>		
+										<th>Monto</th>
 									</tr>
 									</thead>
 									<tbody>
 									<tr class="odd gradeX">
 										<td><a href="../../carga_todos.html">21365</a></td>
 										<td>00 - CD-SANTIAGO</td>
-										<td>REPARTO</td>
-										<td>20/03/2017</td>
-										<td>360.500</td>
+										<td>TALCA</td>
+										<td>CPPL-54</td>
+										<td>180.250</td>
 									</tr>
-									
+									<tr class="odd gradeX">
+										<td><a href="../../carga_todos.html">21366</a></td>
+										<td>00 - CD-SANTIAGO</td>
+										<td>TALCA</td>
+										<td>CPPL-54</td>
+										<td>180.250</td>
+									</tr>
 									</tbody>
 								</table>
                             </div> 
