--- a/views/Facturacion/Modifica/boleta.html
+++ b/views/Facturacion/Modifica/boleta.html
@@ -116,8 +116,10 @@
                         <tbody>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">14214222</a></td>
+                            <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>EN VIAJE</td>
@@ -126,8 +128,10 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">14214222</a></td>
+                            <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+
                             <td>00 CD-SANTIAGO</td>
                             <td>17 TI-TALCA</td>
                             <td>CERRADO</td>
@@ -136,9 +140,11 @@
                         </tr>
 
                         <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214223</a></td>
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">14214222</a></td>
+                            <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+
                             <td>00 CD-SANTIAGO</td>
                             <td>15 ARICA</td>
                             <td>CARGANDO</td>
@@ -146,9 +152,11 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214223</a></td>
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">14214222</a></td>
+                            <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+
                             <td>00 CD-SANTIAGO</td>
                             <td>14 PUERTO MONTT</td>
                             <td>CREADO</td>
@@ -156,9 +164,11 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214224</a></td>
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">14214222</a></td>
+                            <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+
                             <td>00 CD-SANTIAGO</td>
                             <td>36 ANTOFAGASTA</td>
                             <td>ANULADO</td>
@@ -166,9 +176,11 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214225</a></td>
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">14214222</a></td>
+                            <td><a href="../../carga_todos.html">121614222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+
                             <td>00 CD-SANTIAGO</td>
                             <td>19 LA FLORIDA</td>
                             <td>EN VIAJE</td>
